packages/core/src/internal/base/base.element.scss
// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
// This software is released under MIT license.
// The full license information can be found in LICENSE in the root directory of this project.

@import '../../styles/tokens/generated/index';
@import './../../styles/module.layout';
@import './../../styles/module.typography';
@import './../../styles/layout/shims/gap';

// Safari, if no flex gap apply shim
:host([_nfg]) {
  @include generateGapShim();
}

// Every Web Component will need to import a minimal amount of core CSS
:host {
  all: initial;
  display: block;
  font-family: $cds-global-typography-font-family;
  contain: layout; // https://developer.mozilla.org/en-US/docs/Web/CSS/contain
  box-sizing: border-box !important;
  -webkit-appearance: none !important;
}

*,
*:before,
*:after {
  box-sizing: inherit !important;
}

slot {
  font-family: $cds-global-typography-font-family;
  display: contents !important;
}

:host([role='button']),
:host([_is-anchor]) {
  cursor: pointer !important;

  ::slotted(*) {
    cursor: pointer !important;
  }
}

:host([role='button'][disabled]) {
  cursor: not-allowed !important;

  ::slotted(*) {
    cursor: not-allowed !important;
  }
}

// https://developers.google.com/web/fundamentals/web-components/best-practices#add-a-:host-display-style-that-respects-the-hidden-attribute
// we need the check against hidden='false' here because React is pushing string through instead of adding/removing the boolean attribute
:host([hidden]) {
  display: none !important;
}

:host([hidden*='false']) {
  display: block !important;
}

// normalize focus styles
:host([tabindex='0']:focus),
:host([_focused]) .input {
  outline: Highlight solid $cds-global-space-2;
  outline-offset: $cds-global-space-1;
}

@media (-webkit-min-device-pixel-ratio: 0) {
  :host([tabindex='0']:focus),
  :host([_focused]) .input {
    outline-color: -webkit-focus-ring-color;
  }
}

